update arbres avec mermaid

--- a/docs/notebooks/T2/2Structure_Arborescente-Nathanael.ipynb
+++ b/docs/notebooks/T2/2Structure_Arborescente-Nathanael.ipynb
@@ -443,6 +443,28 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```mermaid\n",
+    "graph TD\n",
+    "    4((4)) --- 3((3))\n",
+    "    4 --- 1((1))\n",
+    "    3 --- 6((6))\n",
+    "    3 --- 20( )\n",
+    "    1 --- 2((2))\n",
+    "    1 --- 7((7))\n",
+    "    7 --- 9((9))\n",
+    "    7 --- 21( )\n",
+    "    linkStyle 3 stroke-width:0px\n",
+    "    style 20 opacity:0\n",
+    "    linkStyle 7 stroke-width:0px\n",
+    "    style 21 opacity:0\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -728,6 +750,22 @@
    "metadata": {},
    "source": [
     "![](https://github.com/Naellll/Classeur_TNSI/blob/main/docs/images/arbre2.PNG?raw=true)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```mermaid\n",
+    "graph TD\n",
+    "    3((3)) --- 4((4))\n",
+    "    3 --- 100( )\n",
+    "    4 --- 7((7))\n",
+    "    4 --- 5((5))\n",
+    "    linkStyle 1 stroke-width:0px\n",
+    "    style 100 opacity:0\n",
+    "```"
    ]
   },
   {
@@ -1561,7 +1599,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13 (default, Oct  4 2022, 14:00:32) \n[GCC 9.4.0]"
+   "version": "3.8.13"
   },
   "toc": {
    "base_numbering": 1,
