--- a/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
+++ b/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
@@ -81,22 +81,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(7, [0])"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#2\n"
+    "#2\n",
+    "def positif(pile):\n",
+    "    pile_1 = list(pile)\n",
+    "    pile_2 = []\n",
+    "    while pile_1 != []:\n",
+    "        x = pile_1.pop()\n",
+    "        if x >= 0:\n",
+    "            pile_2.append(x)\n",
+    "    while pile_2 != []:\n",
+    "        x = pile_2.pop()\n",
+    "        pile_1.append(x)\n",
+    "    return pile_1"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sujet n°3 :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1\n",
+    "def moyenne(liste):\n",
+    "    valeur = 0\n",
+    "    coeff = 0\n",
+    "    total = 0\n",
+    "    for i in liste:\n",
+    "        valeur, coeff = i\n",
+    "        total += valeur*coeff\n",
+    "    coeff = 0\n",
+    "    for i in liste:\n",
+    "        coeff += i[1]\n",
+    "    if coeff == 0:\n",
+    "        return None\n",
+    "    else:\n",
+    "        return total/coeff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2\n",
+    "def affiche(dessin):\n",
+    "    ''' affichage d'une grille : les 1 sont reprÃ©sentÃ©s par\n",
+    "        des \" *\" , les 0 par deux espaces \"  \" \n",
+    "        La valeur \"\" donnÃ©e au paramÃ¨tre end permet \n",
+    "        de ne pas avoir de  saut de ligne. '''\n",
+    "    for ligne in dessin:\n",
+    "        for col in ligne:\n",
+    "            if col == 1:\n",
+    "                print(\" *\", end=\"\")\n",
+    "            else:\n",
+    "                print(\"  \", end=\"\")\n",
+    "        print()\n",
+    "\n",
+    "def zoomListe(liste_depart, k):\n",
+    "    '''renvoie une liste contenant k fois chaque\n",
+    "       Ã©lÃ©ment de liste_depart'''\n",
+    "    liste_zoom = ...\n",
+    "    for elt in ... :\n",
+    "        for i in range(k):\n",
+    "            ...\n",
+    "    return liste_zoom\n",
+    "\n",
+    "def zoomDessin(grille, k):\n",
+    "    '''renvoie une grille ou les lignes sont zoomÃ©es k fois\n",
+    "       ET rÃ©pÃ©tÃ©es k fois'''\n",
+    "    grille_zoom=[]\n",
+    "    for elt in grille:\n",
+    "        liste_zoom = ...\n",
+    "        for i in range(k):\n",
+    "            ... .append(...)\n",
+    "    return grille_zoom"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coeur = [[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "         [0, 0, 0, 1, 1, 0, 0, 0, 1, 1, 0, 0, 0],\n",
+    "         [0, 0, 1, 0, 0, 1, 0, 1, 0, 0, 1, 0, 0],\n",
+    "         [0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0],\n",
+    "         [0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0],\n",
+    "         [0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0],\n",
+    "         [0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0],\n",
+    "         [0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0],\n",
+    "         [0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0],\n",
+    "         [0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0],\n",
+    "         [0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0],\n",
+    "         [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]]\n",
+    "\n"
    ]
   },
   {
@@ -198,7 +290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13 (default, Oct  4 2022, 14:00:32) \n[GCC 9.4.0]"
+   "version": "3.8.13"
   },
   "orig_nbformat": 4,
   "vscode": {
