--- a/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
+++ b/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,10 +153,10 @@
     "def zoomListe(liste_depart, k):\n",
     "    '''renvoie une liste contenant k fois chaque\n",
     "       Ã©lÃ©ment de liste_depart'''\n",
-    "    liste_zoom = ...\n",
-    "    for elt in ... :\n",
+    "    liste_zoom = []\n",
+    "    for elt in liste_depart:\n",
     "        for i in range(k):\n",
-    "            ...\n",
+    "            liste_zoom.append(elt)\n",
     "    return liste_zoom\n",
     "\n",
     "def zoomDessin(grille, k):\n",
@@ -164,17 +164,60 @@
     "       ET rÃ©pÃ©tÃ©es k fois'''\n",
     "    grille_zoom=[]\n",
     "    for elt in grille:\n",
-    "        liste_zoom = ...\n",
+    "        liste_zoom = zoomListe(elt, k)\n",
     "        for i in range(k):\n",
-    "            ... .append(...)\n",
+    "            grille_zoom.append(liste_zoom)\n",
     "    return grille_zoom"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                                              \n",
+      "                                                                              \n",
+      "                                                                              \n",
+      "                   * * * * * *                   * * * * * *                  \n",
+      "                   * * * * * *                   * * * * * *                  \n",
+      "                   * * * * * *                   * * * * * *                  \n",
+      "             * * *             * * *       * * *             * * *            \n",
+      "             * * *             * * *       * * *             * * *            \n",
+      "             * * *             * * *       * * *             * * *            \n",
+      "       * * *                         * * *                         * * *      \n",
+      "       * * *                         * * *                         * * *      \n",
+      "       * * *                         * * *                         * * *      \n",
+      "       * * *                                                       * * *      \n",
+      "       * * *                                                       * * *      \n",
+      "       * * *                                                       * * *      \n",
+      "       * * *                                                       * * *      \n",
+      "       * * *                                                       * * *      \n",
+      "       * * *                                                       * * *      \n",
+      "             * * *                                           * * *            \n",
+      "             * * *                                           * * *            \n",
+      "             * * *                                           * * *            \n",
+      "                   * * *                               * * *                  \n",
+      "                   * * *                               * * *                  \n",
+      "                   * * *                               * * *                  \n",
+      "                         * * *                   * * *                        \n",
+      "                         * * *                   * * *                        \n",
+      "                         * * *                   * * *                        \n",
+      "                               * * *       * * *                              \n",
+      "                               * * *       * * *                              \n",
+      "                               * * *       * * *                              \n",
+      "                                     * * *                                    \n",
+      "                                     * * *                                    \n",
+      "                                     * * *                                    \n",
+      "                                                                              \n",
+      "                                                                              \n",
+      "                                                                              \n"
+     ]
+    }
+   ],
    "source": [
     "coeur = [[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
     "         [0, 0, 0, 1, 1, 0, 0, 0, 1, 1, 0, 0, 0],\n",
@@ -188,7 +231,8 @@
     "         [0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0],\n",
     "         [0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0],\n",
     "         [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]]\n",
-    "\n"
+    "\n",
+    "affiche(zoomDessin(coeur, 3))"
    ]
   },
   {
@@ -295,7 +339,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "9ac03a0a6051494cc606d484d27d20fce22fb7b4d169f583271e11d5ba46a56e"
+    "hash": "110cc1dee26208153f2972f08a2ad52b6a56238dc66d48e87fb757ef2996db56"
    }
   }
  },
