avancée Exercice_pratique

--- a/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
+++ b/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
@@ -175,6 +175,169 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Sujet n°4 :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1 \n",
+    "def a_doublon(liste):\n",
+    "    doublon = False\n",
+    "    for i in range(len(liste)-1):\n",
+    "        if liste[i] == liste[i+1]:\n",
+    "            doublon = True\n",
+    "    return doublon"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2\n",
+    "def voisinage(n, ligne, colonne):\n",
+    "    \"\"\" Renvoie la liste des coordonnÃ©es des voisins de la case\n",
+    "        (ligne, colonne) en gÃ¨rant les cases sur les bords. \"\"\"\n",
+    "    voisins = []\n",
+    "    for l in range(max(0,ligne-1), min(n, ligne+2)):\n",
+    "        for c in range(max(0, colonne-1), min(n, colonne+2)):\n",
+    "            if (l, c) != (ligne, colonne):\n",
+    "                voisins.append((l,c))\n",
+    "    return voisins\n",
+    "\n",
+    "def incremente_voisins(grille, ligne, colonne):\n",
+    "    \"\"\" IncrÃ©mente de 1 toutes les cases voisines d'une bombe. \"\"\"\n",
+    "    voisins = voisinage(len(grille), ligne, colonne)\n",
+    "    for l, c in voisins:\n",
+    "        if grille[l][c] != -1: # si ce n'est pas une bombe\n",
+    "            grille[l][c] += 1\t# on ajoute 1 Ã  sa valeur\n",
+    "\n",
+    "def génère_grille(bombes):\n",
+    "    \"\"\" Renvoie une grille de dÃ©mineur de taille nxn oÃ¹ n est\n",
+    "        le nombre de bombes, en plaÃ§ant les bombes Ã  l'aide de\n",
+    "        la liste bombes de coordonnÃ©es (tuples) passÃ©e en\n",
+    "        paramÃ¨tre. \"\"\"\n",
+    "    n = len(bombes)\n",
+    "    # Initialisation d'une grille nxn remplie de 0\n",
+    "    grille = [[0 for colonne in range(n)] for ligne in range(n)]\n",
+    "\n",
+    "    # Place les bombes et calcule les valeurs des autres cases\n",
+    "    for ligne, colonne in bombes:\n",
+    "        grille[ligne][colonne] = -1  # place la bombe\n",
+    "        incremente_voisins(grille, ligne, colonne)  # incrÃ©mente ses voisins\n",
+    "\n",
+    "    return grille"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sujet n°5 :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1\n",
+    "from random import randint\n",
+    "\n",
+    "def lancer(n):\n",
+    "    resultat = []\n",
+    "    for i in range(n):\n",
+    "        resultat.append(randint(1, 6))\n",
+    "    return resultat\n",
+    "\n",
+    "def paire_6(liste):\n",
+    "    total_6 = 0\n",
+    "    for i in liste:\n",
+    "        if i == 6:\n",
+    "            total_6 += 1\n",
+    "    if total_6 >= 2:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 1, 5, 4, 3, 6]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lancer(6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2\n",
+    "def nbLig(image):\n",
+    "    '''renvoie le nombre de lignes de l'image'''\n",
+    "    return ...\n",
+    "\n",
+    "def nbCol(image):\n",
+    "    '''renvoie la largeur de l'image'''\n",
+    "    return ...\n",
+    "\n",
+    "def negatif(image):\n",
+    "    '''renvoie le negatif de l'image sous la forme\n",
+    "       d'une liste de listes'''\n",
+    "\n",
+    "    # on cree une image de 0 aux memes dimensions que le parametre image\n",
+    "    L = [[0 for k in range(nbCol(image))] for i in range(nbLig(image))]\n",
+    "\n",
+    "    for i in range(nbLig(image)):\n",
+    "        for j in range(...):\n",
+    "            L[i][j] = ...\n",
+    "    return L\n",
+    "\n",
+    "def binaire(image, seuil):\n",
+    "    '''renvoie une image binarisee de l'image sous la forme\n",
+    "       d'une liste de listes contenant des 0 si la valeur\n",
+    "       du pixel est strictement inferieure au seuil\n",
+    "       et 1 sinon'''\n",
+    "\n",
+    "    # on cree une image de 0 aux memes dimensions que le parametre image\n",
+    "    L = [[0 for k in range(nbCol(image))] for i in range(nbLig(image))]\n",
+    "\n",
+    "    for i in range(nbLig(image)):\n",
+    "        for j in range(...):\n",
+    "            if image[i][j] < ... :\n",
+    "                L[i][j] = ...\n",
+    "            else:\n",
+    "                L[i][j] = ...\n",
+    "    return L"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Sujet n°09 :"
    ]
   },
@@ -184,7 +347,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#1.\n",
+    "#1\n",
     "def multiplication(n1, n2):\n",
     "    total = 0\n",
     "\n",
@@ -208,7 +371,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#2.\n",
+    "#2\n",
     "def chercher(tab, n, i, j):\n",
     "    if i < 0 or j > len(tab):\n",
     "        return None\n",
@@ -269,7 +432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.16"
   },
   "orig_nbformat": 4,
   "vscode": {
