avancée exercices pratiques

--- a/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
+++ b/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
@@ -270,38 +270,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[5, 1, 5, 4, 3, 6]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lancer(6)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "#2\n",
     "def nbLig(image):\n",
     "    '''renvoie le nombre de lignes de l'image'''\n",
-    "    return ...\n",
+    "    return len(image)\n",
     "\n",
     "def nbCol(image):\n",
     "    '''renvoie la largeur de l'image'''\n",
-    "    return ...\n",
+    "    return len(image[0])\n",
     "\n",
     "def negatif(image):\n",
     "    '''renvoie le negatif de l'image sous la forme\n",
@@ -311,8 +291,8 @@
     "    L = [[0 for k in range(nbCol(image))] for i in range(nbLig(image))]\n",
     "\n",
     "    for i in range(nbLig(image)):\n",
-    "        for j in range(...):\n",
-    "            L[i][j] = ...\n",
+    "        for j in range(nbCol(image)):\n",
+    "            L[i][j] = 255-image[i][j]\n",
     "    return L\n",
     "\n",
     "def binaire(image, seuil):\n",
@@ -325,12 +305,88 @@
     "    L = [[0 for k in range(nbCol(image))] for i in range(nbLig(image))]\n",
     "\n",
     "    for i in range(nbLig(image)):\n",
-    "        for j in range(...):\n",
-    "            if image[i][j] < ... :\n",
-    "                L[i][j] = ...\n",
+    "        for j in range(nbCol(image)):\n",
+    "            if image[i][j] < seuil :\n",
+    "                L[i][j] = 0\n",
     "            else:\n",
-    "                L[i][j] = ...\n",
+    "                L[i][j] = 1\n",
     "    return L"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sujet n°6 :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1\n",
+    "def recherche(tab, n):\n",
+    "    indice_max = 0\n",
+    "    for i in range(len(tab)):\n",
+    "        if tab[i] == n:\n",
+    "            indice_max = i\n",
+    "    if n in tab:\n",
+    "        return indice_max\n",
+    "    else:\n",
+    "        return len(tab)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2\n",
+    "from math import sqrt   # import de la fonction racine carrée\n",
+    "def distance(point1, point2):\n",
+    "    \"\"\" Calcule et renvoie la distance entre deux points. \"\"\"\n",
+    "    return sqrt((point1[0]-point2[0])**2 + (point1[1]-point2[1])**2)\n",
+    "\n",
+    "def plus_courte_distance(tab, depart):\n",
+    "    \"\"\" Renvoie le point du tableau tab se trouvant a la plus\n",
+    "    courte distance du point depart.\"\"\"\n",
+    "    point = tab[0]\n",
+    "    min_dist = distance(tab[0], depart)\n",
+    "    for i in range (1, len(tab)):\n",
+    "        if distance(tab[i], depart) < min_dist:\n",
+    "            point = tab[i]\n",
+    "            min_dist = distance(point, depart)\n",
+    "    return point"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sujet n°7 :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2\n"
    ]
   },
   {
