--- a/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
+++ b/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
@@ -373,11 +373,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#1\n"
+    "#1\n",
+    "def fusion(tab1, tab2):\n",
+    "    fusion = []\n",
+    "    for i in tab1:\n",
+    "        fusion.append(i)\n",
+    "    for i in tab2:\n",
+    "        fusion.append(i)\n",
+    "    fusion.sort()\n",
+    "    return fusion"
    ]
   },
   {
