avancée Exercice_pratique (oui encore)

--- a/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
+++ b/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
@@ -390,11 +390,97 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2\n",
+    "romains = {\"I\":1, \"V\":5, \"X\":10, \"L\":50, \"C\":100, \"D\":500, \"M\":1000}\n",
+    "\n",
+    "def traduire_romain(nombre) :\n",
+    "    \"\"\" Renvoie l'ecriture decimale du nombre donnÃ© en chiffres romains \"\"\"\n",
+    "\n",
+    "    if len(nombre) == 1:\n",
+    "        return romains[nombre[0]]\n",
+    "\n",
+    "    elif romains[nombre[0]] >= romains[nombre[1]] :\n",
+    "        return romains[nombre[0]] + traduire_romain(nombre[1:])\n",
+    "        \n",
+    "    else:\n",
+    "        return traduire_romain(nombre[1:]) - romains[nombre[0]]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sujet n°08 :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1\n",
+    "def max_dico(dico):\n",
+    "    like_max = 0\n",
+    "    for i in dico:\n",
+    "        if dico[i] >= like_max:\n",
+    "            like_max = dico[i]\n",
+    "            utilisateur = i\n",
+    "    return (utilisateur, like_max)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#2\n"
+    "#2\n",
+    "class Pile:\n",
+    "    \"\"\"\n",
+    "    Classe definissant une structure de pile.\n",
+    "    \"\"\"\n",
+    "    def __init__(self):\n",
+    "        self.contenu = []\n",
+    "\n",
+    "    def est_vide(self):\n",
+    "        \"\"\"\n",
+    "        Renvoie le booleen True si la pile est vide, False sinon.\n",
+    "        \"\"\"\n",
+    "        return self.contenu == []\n",
+    "\n",
+    "    def empiler(self, v):\n",
+    "        \"\"\"\n",
+    "        Place l'element v au sommet de la pile\n",
+    "        \"\"\"\n",
+    "        self.contenu.append(v)\n",
+    "\n",
+    "    def depiler(self):\n",
+    "        \"\"\"\n",
+    "        Retire et renvoie l'element place au sommet de la pile,\n",
+    "        si la pile n'est pas vide.\n",
+    "        \"\"\"\n",
+    "        if not self.est_vide():\n",
+    "            return self.contenu.pop()\n",
+    "\n",
+    "\n",
+    "def eval_expression(tab):\n",
+    "    p = Pile()\n",
+    "    for element in tab:\n",
+    "        if element != '+' and element != '*':\n",
+    "            p.empiler(element)\n",
+    "        else:\n",
+    "            if element == \"+\":\n",
+    "                resultat = p.depiler() + p.depiler()\n",
+    "            else:\n",
+    "                resultat = p.depiler() * p.depiler()\n",
+    "            p.empiler(resultat)\n",
+    "    return p.depiler()"
    ]
   },
   {
@@ -431,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,41 +529,121 @@
     "        return None\n",
     "    m = (i + j) // 2\n",
     "    if tab[m] < n:\n",
-    "        return chercher(tab, n, m, j)\n",
+    "        return chercher(tab, n, m+1, j)\n",
     "    elif tab[m] > n:\n",
-    "        return chercher(tab, n, i, m)\n",
+    "        return chercher(tab, n, i, m-1)\n",
     "    else:\n",
     "        return m"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "RecursionError",
-     "evalue": "maximum recursion depth exceeded in comparison",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRecursionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m chercher([\u001b[39m1\u001b[39m, \u001b[39m5\u001b[39m, \u001b[39m6\u001b[39m, \u001b[39m6\u001b[39m, \u001b[39m9\u001b[39m, \u001b[39m12\u001b[39m], \u001b[39m7\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m5\u001b[39m)\n",
-      "Cell \u001b[0;32mIn [1], line 9\u001b[0m, in \u001b[0;36mchercher\u001b[0;34m(tab, n, i, j)\u001b[0m\n\u001b[1;32m      7\u001b[0m m \u001b[39m=\u001b[39m (i \u001b[39m+\u001b[39m j) \u001b[39m/\u001b[39m\u001b[39m/\u001b[39m \u001b[39m2\u001b[39m\n\u001b[1;32m      8\u001b[0m \u001b[39mif\u001b[39;00m tab[m] \u001b[39m<\u001b[39m n:\n\u001b[0;32m----> 9\u001b[0m     \u001b[39mreturn\u001b[39;00m chercher(tab, n, m, j)\n\u001b[1;32m     10\u001b[0m \u001b[39melif\u001b[39;00m tab[m] \u001b[39m>\u001b[39m n:\n\u001b[1;32m     11\u001b[0m     \u001b[39mreturn\u001b[39;00m chercher(tab, n, i, m)\n",
-      "Cell \u001b[0;32mIn [1], line 9\u001b[0m, in \u001b[0;36mchercher\u001b[0;34m(tab, n, i, j)\u001b[0m\n\u001b[1;32m      7\u001b[0m m \u001b[39m=\u001b[39m (i \u001b[39m+\u001b[39m j) \u001b[39m/\u001b[39m\u001b[39m/\u001b[39m \u001b[39m2\u001b[39m\n\u001b[1;32m      8\u001b[0m \u001b[39mif\u001b[39;00m tab[m] \u001b[39m<\u001b[39m n:\n\u001b[0;32m----> 9\u001b[0m     \u001b[39mreturn\u001b[39;00m chercher(tab, n, m, j)\n\u001b[1;32m     10\u001b[0m \u001b[39melif\u001b[39;00m tab[m] \u001b[39m>\u001b[39m n:\n\u001b[1;32m     11\u001b[0m     \u001b[39mreturn\u001b[39;00m chercher(tab, n, i, m)\n",
-      "Cell \u001b[0;32mIn [1], line 11\u001b[0m, in \u001b[0;36mchercher\u001b[0;34m(tab, n, i, j)\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[39mreturn\u001b[39;00m chercher(tab, n, m, j)\n\u001b[1;32m     10\u001b[0m \u001b[39melif\u001b[39;00m tab[m] \u001b[39m>\u001b[39m n:\n\u001b[0;32m---> 11\u001b[0m     \u001b[39mreturn\u001b[39;00m chercher(tab, n, i, m)\n\u001b[1;32m     12\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     13\u001b[0m     \u001b[39mreturn\u001b[39;00m m\n",
-      "Cell \u001b[0;32mIn [1], line 9\u001b[0m, in \u001b[0;36mchercher\u001b[0;34m(tab, n, i, j)\u001b[0m\n\u001b[1;32m      7\u001b[0m m \u001b[39m=\u001b[39m (i \u001b[39m+\u001b[39m j) \u001b[39m/\u001b[39m\u001b[39m/\u001b[39m \u001b[39m2\u001b[39m\n\u001b[1;32m      8\u001b[0m \u001b[39mif\u001b[39;00m tab[m] \u001b[39m<\u001b[39m n:\n\u001b[0;32m----> 9\u001b[0m     \u001b[39mreturn\u001b[39;00m chercher(tab, n, m, j)\n\u001b[1;32m     10\u001b[0m \u001b[39melif\u001b[39;00m tab[m] \u001b[39m>\u001b[39m n:\n\u001b[1;32m     11\u001b[0m     \u001b[39mreturn\u001b[39;00m chercher(tab, n, i, m)\n",
-      "Cell \u001b[0;32mIn [1], line 9\u001b[0m, in \u001b[0;36mchercher\u001b[0;34m(tab, n, i, j)\u001b[0m\n\u001b[1;32m      7\u001b[0m m \u001b[39m=\u001b[39m (i \u001b[39m+\u001b[39m j) \u001b[39m/\u001b[39m\u001b[39m/\u001b[39m \u001b[39m2\u001b[39m\n\u001b[1;32m      8\u001b[0m \u001b[39mif\u001b[39;00m tab[m] \u001b[39m<\u001b[39m n:\n\u001b[0;32m----> 9\u001b[0m     \u001b[39mreturn\u001b[39;00m chercher(tab, n, m, j)\n\u001b[1;32m     10\u001b[0m \u001b[39melif\u001b[39;00m tab[m] \u001b[39m>\u001b[39m n:\n\u001b[1;32m     11\u001b[0m     \u001b[39mreturn\u001b[39;00m chercher(tab, n, i, m)\n",
-      "    \u001b[0;31m[... skipping similar frames: chercher at line 9 (2966 times)]\u001b[0m\n",
-      "Cell \u001b[0;32mIn [1], line 9\u001b[0m, in \u001b[0;36mchercher\u001b[0;34m(tab, n, i, j)\u001b[0m\n\u001b[1;32m      7\u001b[0m m \u001b[39m=\u001b[39m (i \u001b[39m+\u001b[39m j) \u001b[39m/\u001b[39m\u001b[39m/\u001b[39m \u001b[39m2\u001b[39m\n\u001b[1;32m      8\u001b[0m \u001b[39mif\u001b[39;00m tab[m] \u001b[39m<\u001b[39m n:\n\u001b[0;32m----> 9\u001b[0m     \u001b[39mreturn\u001b[39;00m chercher(tab, n, m, j)\n\u001b[1;32m     10\u001b[0m \u001b[39melif\u001b[39;00m tab[m] \u001b[39m>\u001b[39m n:\n\u001b[1;32m     11\u001b[0m     \u001b[39mreturn\u001b[39;00m chercher(tab, n, i, m)\n",
-      "Cell \u001b[0;32mIn [1], line 3\u001b[0m, in \u001b[0;36mchercher\u001b[0;34m(tab, n, i, j)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mchercher\u001b[39m(tab, n, i, j):\n\u001b[0;32m----> 3\u001b[0m     \u001b[39mif\u001b[39;00m i \u001b[39m<\u001b[39;49m \u001b[39m0\u001b[39;49m \u001b[39mor\u001b[39;00m j \u001b[39m>\u001b[39m \u001b[39mlen\u001b[39m(tab):\n\u001b[1;32m      4\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m      5\u001b[0m     \u001b[39melif\u001b[39;00m i \u001b[39m>\u001b[39m j:\n",
-      "\u001b[0;31mRecursionError\u001b[0m: maximum recursion depth exceeded in comparison"
-     ]
-    }
-   ],
    "source": [
-    "chercher([1, 5, 6, 6, 9, 12], 7, 0, 5)"
+    "# Sujet n°10 :"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1\n",
+    "def maxliste(liste):\n",
+    "    maxliste = liste[0]\n",
+    "    for i in liste:\n",
+    "        if i > maxliste:\n",
+    "            maxliste = i\n",
+    "    return maxliste"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ou\n",
+    "def maxliste(liste):\n",
+    "    maxliste = liste[0]\n",
+    "    maxliste = [i for i in liste if i > maxliste]\n",
+    "    return maxliste[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Pile:\n",
+    "    \"\"\"\n",
+    "    Classe definissant une pile\n",
+    "    \"\"\"\n",
+    "    def __init__(self):\n",
+    "        self.valeurs = []\n",
+    "\n",
+    "    def est_vide(self):\n",
+    "        \"\"\"\n",
+    "        Renvoie True si la pile est vide, False sinon\n",
+    "        \"\"\"\n",
+    "        return self.valeurs == []\n",
+    "\n",
+    "    def empiler(self, c):\n",
+    "        \"\"\"\n",
+    "        Place l'element c au sommet de la pile\n",
+    "        \"\"\"\n",
+    "        self.valeurs.append(c)\n",
+    "\n",
+    "    def depiler(self):\n",
+    "        \"\"\"\n",
+    "        Supprime l'element place au sommet de la pile, a condition qu'elle soit non vide\n",
+    "        \"\"\"\n",
+    "        if self.est_vide() == False:\n",
+    "            self.valeurs.pop()\n",
+    "\n",
+    "\n",
+    "def parenthesage(ch):\n",
+    "    \"\"\"\n",
+    "    Renvoie True si la chaine ch est bien parenthesee et False sinon\n",
+    "    \"\"\"\n",
+    "    p = Pile()\n",
+    "    for c in ch:\n",
+    "        if c == \"(\":\n",
+    "            p.empiler(c)\n",
+    "        elif c == \")\":\n",
+    "            if p.est_vide():\n",
+    "                return False\n",
+    "            else:\n",
+    "                p.depiler()\n",
+    "    return p.est_vide()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sujet n°11 :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
