--- a/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
+++ b/docs/notebooks/Autre/Exercices/Exercice_pratique.ipynb
@@ -265,7 +265,7 @@
     "    if total_6 >= 2:\n",
     "        return True\n",
     "    else:\n",
-    "        return False\n"
+    "        return False"
    ]
   },
   {
@@ -631,11 +631,110 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1\n",
+    "def convertir(tab):\n",
+    "    \"\"\"\n",
+    "    tab est un tableau d'entiers, dont les éléments sont 0 ou 1,\n",
+    "    et représentant un entier écrit en binaire.\n",
+    "    Renvoie l'écriture décimale de l'entier positif dont la\n",
+    "    représentation binaire est donnée par le tableau tab\n",
+    "    \"\"\"\n",
+    "    nombre = 0\n",
+    "    taille = len(tab)\n",
+    "    for i in range(taille):\n",
+    "        if tab[i] == 1:\n",
+    "            nombre += 2**(taille-i-1)\n",
+    "    return nombre"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ou en récursif\n",
+    "def convertir(tab):\n",
+    "    if len(tab) == 1:\n",
+    "        if tab[0] == 1:\n",
+    "            return 2**(len(tab)-1)\n",
+    "        else:\n",
+    "            return 0\n",
+    "    elif tab[0] == 0:\n",
+    "        return 0 + convertir(tab[1:])\n",
+    "    else:\n",
+    "        return 2**(len(tab)-1) + convertir(tab[1:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2\n",
+    "def tri_insertion(tab):\n",
+    "    n = len(tab)\n",
+    "    for i in range(1, n):\n",
+    "        valeur_insertion = tab[i]\n",
+    "        # la variable j sert Ã  dÃ©terminer oÃ¹ placer la valeur Ã  ranger\n",
+    "        j = i\n",
+    "        # tant qu'on a pas trouvÃ© la place de l'Ã©lÃ©ment Ã  insÃ©rer\n",
+    "        # on dÃ©cale les valeurs du tableau vers la droite\n",
+    "        while j > 0 and valeur_insertion < tab[j-1]:\n",
+    "            tab[j] = tab[j-1]\n",
+    "            j = j-1\n",
+    "        tab[j] = valeur_insertion"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sujet n°12 :"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2\n",
+    "def empaqueter(liste_masses, c):\n",
+    "    n = len(liste_masses)\n",
+    "    nb_boites = 0\n",
+    "    boites = [0]*n\n",
+    "    for masse in liste_masses :\n",
+    "        i=0\n",
+    "        while i <= nb_boites and boites[i] + masse > c:\n",
+    "                i = i + 1\n",
+    "        if i == nb_boites + 1:\n",
+    "            nb_boites += 1\n",
+    "        boites[i] = boites[i] + masse\n",
+    "    return nb_boites + 1"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sujet n°13 :"
    ]
   },
   {
